# pypacs

./: .gitignore  README.rst  pyproject.toml  requirements.txt
examples/: check_connectivity.py  download_files.py  query_and_save_metadata.py  query_and_save_metadata_advanced.py
pypacs/: pypacs.py
resources/: conf_template.json
