[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypacs"
version = "0.1.0"
description = "A Python package for PACS interactions"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
    "pypx",
    "pydicom",
    "pandas"
]

[project.optional-dependencies]
test = [
    "pytest"
]
